// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests articlesPreviews is zero 1`] = `
<ForwardRef(Stack)
  spacing={2}
>
  <ForwardRef(Typography)
    align="center"
  >
    表示する投稿がありません。
  </ForwardRef(Typography)>
</ForwardRef(Stack)>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Stack)
  spacing={2}
>
  <CenterSpinner />
</ForwardRef(Stack)>
`;

exports[`Shallow Snapshot Tests variant popup 1`] = `
<ForwardRef(Stack)
  spacing={2}
>
  <ForwardRef(Box)
    maxHeight={300}
    sx={
      Object {
        "overflow": "scroll",
        "py": 1,
      }
    }
  >
    <ForwardRef(Stack)
      spacing={2}
    >
      <Link
        className="preview-link"
        key="preview-1"
        to="/article/1"
      >
        <ForwardRef(Card)
          sx={
            Object {
              "backgroundColor": "#e3f2fd",
              "p": 1,
            }
          }
        >
          <ForwardRef(Stack)
            spacing={1}
          >
            <ForwardRef(Typography)
              align="center"
              component="h2"
              variant="h6"
            >
              ノーチラス号のエンジン
            </ForwardRef(Typography)>
            <ForwardRef(Typography)
              align="center"
            >
              <Image
                borderRadius={true}
                height="100px"
                objectFit="cover"
                src="https://www.disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg"
                width="200px"
              />
            </ForwardRef(Typography)>
            <ForwardRef(Typography)
              component="div"
              sx={
                Object {
                  "pr": 2,
                }
              }
            >
              <IconAndText
                align="right"
                fontSize={14}
                iconComponent={<Memo />}
                iconPosition="left"
                text="その他"
              />
            </ForwardRef(Typography)>
            <ForwardRef(Typography)
              align="center"
            >
              <IconAndText
                component="span"
                iconComponent={<Memo />}
                iconPosition="left"
                text="くわしく読む"
                variant="button"
              />
            </ForwardRef(Typography)>
          </ForwardRef(Stack)>
        </ForwardRef(Card)>
      </Link>
      <Link
        className="preview-link"
        key="preview-2"
        to="/article/2"
      >
        <ForwardRef(Card)
          sx={
            Object {
              "backgroundColor": "#e3f2fd",
              "p": 1,
            }
          }
        >
          <ForwardRef(Stack)
            spacing={1}
          >
            <ForwardRef(Typography)
              align="center"
              component="h2"
              variant="h6"
            >
              ノーチラス号の名前の由来
            </ForwardRef(Typography)>
            <ForwardRef(Typography)
              component="div"
              sx={
                Object {
                  "pr": 2,
                }
              }
            >
              <IconAndText
                align="right"
                fontSize={14}
                iconComponent={<Memo />}
                iconPosition="left"
                text="その他"
              />
            </ForwardRef(Typography)>
            <ForwardRef(Typography)
              align="center"
            >
              <IconAndText
                component="span"
                iconComponent={<Memo />}
                iconPosition="left"
                text="くわしく読む"
                variant="button"
              />
            </ForwardRef(Typography)>
          </ForwardRef(Stack)>
        </ForwardRef(Card)>
      </Link>
    </ForwardRef(Stack)>
  </ForwardRef(Box)>
  <div
    className="pagination-wrapper"
  >
    <ForwardRef(Pagination)
      count={2}
      onChange={[Function]}
    />
  </div>
</ForwardRef(Stack)>
`;

exports[`Shallow Snapshot Tests with api error 1`] = `
<ForwardRef(Stack)
  spacing={2}
>
  <ForwardRef(Alert)
    severity="error"
  >
    データの取得に失敗しました。
  </ForwardRef(Alert)>
</ForwardRef(Stack)>
`;

exports[`Shallow Snapshot Tests with articlesPreviews 1`] = `
<ForwardRef(Stack)
  spacing={2}
>
  <ForwardRef(Stack)
    spacing={3}
  >
    <Link
      className="preview-link"
      key="preview-1"
      to="/article/1"
    >
      <ForwardRef(Card)
        sx={
          Object {
            "maxWidth": 700,
            "mx": "auto",
          }
        }
      >
        <ForwardRef(CardMedia)
          alt="green iguana"
          className="card-media"
          component="img"
          image="https://www.disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg"
        />
        <ForwardRef(CardContent)>
          <ForwardRef(Typography)
            component="div"
            gutterBottom={true}
            variant="h5"
          >
            ノーチラス号のエンジン
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="left"
            component="div"
            sx={
              Object {
                "mb": 2,
              }
            }
          >
            <IconAndText
              align="left"
              iconComponent={<Memo />}
              iconPosition="left"
              text="その他"
            />
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
            component="div"
          >
            <IconAndText
              component="span"
              iconComponent={<Memo />}
              iconPosition="left"
              text="くわしく読む"
            />
          </ForwardRef(Typography)>
        </ForwardRef(CardContent)>
      </ForwardRef(Card)>
    </Link>
    <Link
      className="preview-link"
      key="preview-2"
      to="/article/2"
    >
      <ForwardRef(Card)
        sx={
          Object {
            "maxWidth": 700,
            "mx": "auto",
          }
        }
      >
        <ForwardRef(CardMedia)
          alt="green iguana"
          className="card-media"
          component="img"
          image="no-image-16x7.jpg"
        />
        <ForwardRef(CardContent)>
          <ForwardRef(Typography)
            component="div"
            gutterBottom={true}
            variant="h5"
          >
            ノーチラス号の名前の由来
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="left"
            component="div"
            sx={
              Object {
                "mb": 2,
              }
            }
          >
            <IconAndText
              align="left"
              iconComponent={<Memo />}
              iconPosition="left"
              text="その他"
            />
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            align="center"
            component="div"
          >
            <IconAndText
              component="span"
              iconComponent={<Memo />}
              iconPosition="left"
              text="くわしく読む"
            />
          </ForwardRef(Typography)>
        </ForwardRef(CardContent)>
      </ForwardRef(Card)>
    </Link>
  </ForwardRef(Stack)>
  <div
    className="pagination-wrapper"
  >
    <ForwardRef(Pagination)
      count={2}
      onChange={[Function]}
    />
  </div>
</ForwardRef(Stack)>
`;
